--- a/tasks/protobox.yml
+++ b/tasks/protobox.yml
@@ -7,7 +7,7 @@
     src=protobox.conf.j2
     dest=/etc/apache2/sites-available/00-protobox.conf
     mode=0640
-  with_items: apache.vhosts
+  with_items: apache_vhosts
   when: >
     (protobox.dashboard is undefined) or 
     (protobox.dashboard is defined and protobox.dashboard.install == 1)
