Work on virtualhosts

--- a/tasks/install22.yml
+++ b/tasks/install22.yml
@@ -14,3 +14,22 @@
     dest={{ path_apache_ports }}
   notify:
     - apache-restart
+
+# Virtual Hosts
+
+- name: virtualhosts | add apache configurations
+  template: >
+    src={{ item.template|default('2.2/default.conf.j2') }}
+    dest=/etc/apache2/sites-available/{{ item.name }}.conf
+    mode=0640
+  with_items: apache_vhosts
+  when: apache_vhosts is defined
+  notify:
+    - apache-restart
+
+- name: virtualhosts | activates our virtualhost
+  command: a2ensite {{ item.name }}.conf
+  with_items: apache_vhosts
+  when: apache_vhosts is defined
+  notify:
+    - apache-restart
