--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -59,3 +59,17 @@
   when: "'ssl_module' in apache_result.stdout"
   notify:
     - apache-restart
+
+# Virtual hosts
+
+- name: install | deactivates the default virtualhost
+  command: a2dissite default
+  ignore_errors: True
+  notify:
+    - apache-restart
+
+- name: install | deactivates the default ssl virtualhost
+  command: a2dissite default-ssl
+  ignore_errors: True
+  notify:
+    - apache-restart
