--- a/tasks/apache.yml
+++ b/tasks/apache.yml
@@ -1,13 +1,13 @@
 # Configuration
 
-- name: install | apache2 lock
+- name: apache | apache2 lock
   file: >
     path=/var/lock/apache2
     owner={{ apache_user }}
     group={{ apache_group }}
     mode=0755
 
-- name: install | set envvars
+- name: apache | set envvars
   template: >
     src={{ apache_envvars|default('envvars.j2') }}
     dest=/etc/apache2/envvars
@@ -18,25 +18,25 @@
     - apache-restart
   when: ansible_os_family == 'Debian'
 
-- name: install | install apache modules
+- name: apache | install apache modules
   command: a2enmod {{ item }}
   with_items: apache_modules
   when: apache_modules is defined
   notify:
     - apache-restart
 
-- name: install | check ssl if module is enabled
+- name: apache | check ssl if module is enabled
   command: sudo apache2ctl -M
   register: apache_result
   ignore_errors: True
 
-- name: install | verify ssl directory
+- name: apache | verify ssl directory
   file: >
     path=/etc/apache2/ssl
     state=directory
   when: "'ssl_module' in apache_result.stdout"
 
-- name: install | create self-signed SSL cert
+- name: apache | create self-signed SSL cert
   command: >
     openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj "/C=US/ST=Oregon/L=Portland/O=IT/CN={{ ansible_fqdn }}" -keyout /etc/apache2/ssl/server.key -extensions v3_ca -out /etc/apache2/ssl/server.crt
   when: "'ssl_module' in apache_result.stdout"
@@ -45,13 +45,13 @@
 
 # Virtual hosts
 
-- name: install | deactivates the default virtualhost
+- name: apache | deactivates the default virtualhost
   command: a2dissite default
   ignore_errors: True
   notify:
     - apache-restart
 
-- name: install | deactivates the default ssl virtualhost
+- name: apache | deactivates the default ssl virtualhost
   command: a2dissite default-ssl
   ignore_errors: True
   notify:
