--- a/tasks/apache24.yml
+++ b/tasks/apache24.yml
@@ -2,19 +2,19 @@
 # Configuration
 
 # echo "ServerName localhost" | sudo tee /etc/apache2/conf-available/servername.conf
-- name: install24 | set servername.conf 
+- name: apache24 | set servername.conf 
   template: >
     src={{ apache_config|default('httpd.conf.j2') }}
     dest=/etc/apache2/conf-available/servername.conf
   notify:
     - apache-restart
 
-- name: install24 | enable servername.conf 
+- name: apache24 | enable servername.conf 
   command: a2enconf servername
   notify:
     - apache-restart
 
-- name: install24 | set ports.conf
+- name: apache24 | set ports.conf
   template: >
     src={{ apache_ports|default('2.4/ports.conf.j2') }}
     dest={{ path_apache_ports }}
@@ -23,7 +23,7 @@
 
 # Virtual Hosts
 
-- name: virtualhosts | add apache configurations
+- name: apache24 | add apache configurations
   template: >
     src={{ item.template|default('2.4/default.conf.j2') }}
     dest=/etc/apache2/sites-available/{{ item.name }}.conf
@@ -33,7 +33,7 @@
   notify:
     - apache-restart
 
-- name: virtualhosts | activates our virtualhost
+- name: apache24 | activates our virtualhost
   command: a2ensite {{ item.name }}.conf
   with_items: apache_vhosts
   when: apache_vhosts is defined
